--- a/Home.html
+++ b/Home.html
@@ -21,8 +21,7 @@
             <h1>New York</h1>
 
             <a href="page6.html">
-                <img src="images/test.png" style="height: 50px; width: 300px;
-             margin-left: 490px;margin-top: 15px; padding-bottom: 15px ">
+                <img src="images/test.png" class="img_home">
             </a>
             <div id="grad2">
                 <center>
@@ -36,7 +35,7 @@
                 </center>
             </div>
 
-            <div id="grad2" style="margin-top: 10px;">
+            <div id="grad2">
                 <center>
                     <h3>The Happy News For You</h3>
                     <h4 class="text2">Fee Free Indian Rupee Remittances</h4>
@@ -47,14 +46,14 @@
                 </center>
             </div>
 
-            <div id="grad2" style="height: 130px;">
+            <div id="grad2_home">
                 <center>
                     <h2>
                         <p>More Services</p>
                     </h2>
                 </center>
                 <div class="clearfix">
-                    <div style="margin-left: 280px">
+                    <div class="more_services">
                         <div class="img-container" style="text-align: center; font-weight: bold">Trade</br> Finance</div>
                         <div class="img-container" style="text-align: center; font-weight: bold">Business</br>Credit</div>
                         <div class="img-container" style="text-align: center; font-weight: bold">Certificate</br>Of Deposits</div>
