--- a/page2.html
+++ b/page2.html
@@ -7,18 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="new.css">
-    <style>
-        input[type=text] {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            box-sizing: border-box;
-            border: none;
-            background-color: skyblue;
-            color: white;
-        }
-    </style>
-    <script type="text/javascript">
+       <script type="text/javascript">
     function submit()
     {
         var Email= document.getElementById("Email").value;
@@ -70,12 +59,11 @@
         <a href="page5.html">
             <div class="imageContainer1">Submit</div>
         </a>
-        <div id="grad2" style="margin-top: 20px">
+        <div id="grad2_home">
             <a href="page6.html">
-                <img src="images/test.png" style="height: 50px; width: 300px;
-                margin-left: 490px;margin-top: 20px">
+                <img src="images/test.png" class="img_pg2">
             </a>
-            <div class="imageContainer" style="height: 80px; width: 500px; margin-left: 350px;">Open checking account online
+            <div class="imageContainer footer">Open checking account online
                 </br> @ www.statebank.com
             </div>
         </div>
