--- a/page3.html
+++ b/page3.html
@@ -19,15 +19,14 @@
             <img src="images/flag_sbilogo.png" alt="flag_sbilogo"></a>
             <h1>New York</h1>
             <a href="page6.html">
-            <img src="images/test.png" style="height: 50px; width: 300px;
-             margin-left: 490px;margin-top: -20px"></a>
+            <img src="images/test.png"  class="img_pg3"></a>
         </div>
-        <div id="grad3" style="margin-bottom: 15px;">
+        <div id="grad3" class="grad3_pg3">
             <center>
             <h3 class="text1">Conditions</h3>
         </center>
         </div>
-        <table style="width: 100%">
+        <table>
             <tr>
                 <th>Eligibility</th>
                 <th colspan="2"></th>
@@ -63,3 +62,5 @@
         </table>
         <a href="page2.html">
         <div class="imageContainer1">Enter Raffle</div></a>
+    </body>
+</html>
