--- a/page4.html
+++ b/page4.html
@@ -19,13 +19,13 @@
             <img src="images/flag_sbilogo.png" alt="flag_sbilogo"></a>
             <h1>New York</h1>
         </div>
-        <div id="grad3" style="margin-bottom: 15px;">
+        <div id="grad3" class="grad3_pg3">
             <center>
             <h3 class="text1">Products & Services</h3>
         </center>
         </div>
         
-<table style="width: 100%;">
+<table>
         <tr>
             <th>Deposits</th>
             <th colspan="2"></th>
@@ -45,8 +45,9 @@
            </div>
         </table>
         
-        <div id="grad2" style="height: 100px; margin-top: 15px;">
+        <div id="grad2">
                 <a href="page6.html">
-                <img src="images/test.png" style="height: 50px; width: 300px;
-                margin-left: 490px;margin-top: 25px"></a>
+                <img src="images/test.png" class="img_pg4"></a>
 </div>
+    </body>
+</html>
