--- a/page5.html
+++ b/page5.html
@@ -25,7 +25,7 @@
             <h3 class="text1">Raffle Identification Number</h3>
         </center>
         </div>
-        <div id="grad1" style="height: 350px;">
+        <div id="grad1_5">
             <center>
             <h3 class="text1">Your Raffle Reference </br>Number is:</h3>
             <h2 class="text3">SBI000000001</h2>
@@ -35,12 +35,11 @@
             </script>
             </center>
             <a href="page6.html">
-                <img src="images/test.png" style="height: 50px; width: 300px;
-                margin-left: 490px;margin-top: 80px">
+                <img src="images/test.png" class="img_pg5">
             </a>
         </div>
         <div id="grad1">
-            <h2 class="text3" style="margin-top: 30px; padding-top: 30px;">460 Park Ave, New York - 10022
+            <h2 class="text3 text3_pg5">460 Park Ave, New York - 10022
                 </br>Email: <u>sbi.nyb@statebank.com </u></br>
                 Phone: 212 521 3200
             </h2>
