--- a/page6.html
+++ b/page6.html
@@ -25,7 +25,7 @@
                 <h3 class="text1">Contact Us</h3>
             </center>
         </div>
-        <div id="grad1" style="height: 450px;">
+        <div id="grad1_6">
             <center>
                 <h1 class="text1">
                     <u>New York Branch</u>
